# recursif

./: .gitmodules  .travis.yml  README.md  __init__.py  __metadata__.py  instrumentation.py  pyproject.toml  requirements.txt  setup.py  tags.py
2003/mathematica/: data.ly  source.nb
2003/parts/: part-template.ly
2003/print-history/: poeme-2003-parts-print-history.rtf
2003/scr/: glue-poeme-2003-distribution-score.tex  make-poeme-2003-back-cover.sh  make-poeme-2003-distribution-score.sh
2005/: blank_11_x_17_portrait.ly  foo.scr  make-score.sh  poeme recursif.nb  poeme-2005-2-compressed.ly  poeme-2005-2-compressed.nb  poeme-2005-2-compressed.out  poeme-2005-2-compressed.ps  poeme-2005-2.ly  poeme-2005-2.nb  poeme-2005-2.out  poeme-2005.nb  poeme-2005.out  poeme-recursif.nb  rec-input.ly  rec-score.ly  rec-score.ps
2005/etc/: poeme-2005-parts-print-history.rtf
2005/indd/: poeme-2005-bc.indd
2005/parts/: converted-full-score.ly  extract_parts.py  make_scores.py  part-01.ly  part-02-score.ly  part-02.ly  part-02.ps  part-03-score.ly  part-03.ly  part-04.ly  part-05-score.ly  part-05.ly  part-06-score.ly  part-06.ly  part-07.ly  part-08-score.ly  part-08.ly  part-09-score.ly  part-09.ly  part-10.ly  part-11-score.ly  part-11.ly  part-12.ly  (+80 more)
assets/: preface-body.tex  preface-colophon.tex
makers/: ScoreTemplate.py  SegmentMaker.py
recursif/: ScoreTemplate.py  __init__.py  __metadata__  __metadata__.py  library.py  poeme-parts-layout.ily  stylesheet.ily  tools.py
share/: parts-line-breaking.ly
stylesheets/: stylesheet.ily
test/: test_recursif_import.py
(+1690 files in other folders)
