[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recursif"
version = "3.28"
description = "Poème récursif (2005) for 64 pieces of percussion"
authors = [{ name = "Trevor Bača", email = "trevor.baca@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["abjad", "lilypond", "music composition", "music notation"]
dependencies = ["abjad>=3.28"]

[project.urls]
Homepage = "https://github.com/trevorbaca/recursif"

[tool.setuptools]
packages = ["recursif"]
package-dir = { "" = "source" }
